# notdiamond-python

./: .gitignore  .pre-commit-config.yaml  README.md  data.json  endpoint.json  pyproject.toml
.github/actions/set-working-directory/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: all-sdk-tests.yml  build_docs.yml  coverage.yml  release.yml  static_docs.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: examples.doctree  intro.doctree  modules.doctree  notdiamond.doctree  notdiamond.llms.doctree  notdiamond.metrics.doctree  notdiamond.prompts.doctree  notdiamond.toolkit.doctree  notdiamond.toolkit.litellm.doctree  notdiamond.toolkit.rag.doctree
docs/_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html  typing.html
docs/_build/html/_static/: documentation_options.js
docs/_build/html/source/: examples.html  intro.html  modules.html  notdiamond.html  notdiamond.llms.html  notdiamond.metrics.html  notdiamond.prompts.html  notdiamond.toolkit.html  notdiamond.toolkit.litellm.html  notdiamond.toolkit.rag.html
docs/source/: intro.rst  notdiamond.llms.rst  notdiamond.metrics.rst  notdiamond.prompts.rst  notdiamond.rst  notdiamond.toolkit.litellm.rst  notdiamond.toolkit.rag.rst  notdiamond.toolkit.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0339f3dec9641b8b_metric_py.html  z_0339f3dec9641b8b_request_py.html  z_187fba855d045126_conftest_py.html  z_187fba855d045126_test_data_gen_py.html  z_187fba855d045126_test_evaluation_py.html  z_187fba855d045126_test_example_workflow_py.html  z_187fba855d045126_test_workflow_py.html  z_1babdb36bee48479___init___py.html  z_1babdb36bee48479__retry_py.html  z_1babdb36bee48479_custom_router_py.html  z_1babdb36bee48479_langchain_py.html  z_1babdb36bee48479_openai_py.html  z_42c99a8a8f89fdfc_test_integration_py.html  z_42c99a8a8f89fdfc_test_unit_py.html  z_5b415e3dd4f0d19e_test_callbacks_py.html  z_5b415e3dd4f0d19e_test_embedding_config_py.html  z_5b415e3dd4f0d19e_test_llm_py.html  z_5b415e3dd4f0d19e_test_llm_request_py.html  z_5b415e3dd4f0d19e_test_provider_py.html  z_5e98763a9bc11e8d_document_loaders_py.html  z_5e98763a9bc11e8d_evaluation_dataset_py.html  z_5e98763a9bc11e8d_evaluation_py.html  z_5e98763a9bc11e8d_llms_py.html  z_5e98763a9bc11e8d_metrics_py.html  z_5e98763a9bc11e8d_testset_py.html  z_5e98763a9bc11e8d_workflow_py.html  z_63d97878657bc260_test_anthropic_py.html  z_63d97878657bc260_test_cohere_py.html  z_63d97878657bc260_test_google_py.html  z_63d97878657bc260_test_mistral_py.html  z_63d97878657bc260_test_moonshotai_py.html  z_63d97878657bc260_test_openai_o1_py.html  z_63d97878657bc260_test_openai_py.html  z_63d97878657bc260_test_perplexity_py.html  z_63d97878657bc260_test_replicate_py.html  z_63d97878657bc260_test_togetherai_py.html  (+32 more)
notdiamond/: __init__.py  _init.py  _utils.py  callbacks.py  exceptions.py  prompts.py  settings.py  types.py
notdiamond/llms/: client.py  config.py  providers.py  request.py
notdiamond/metrics/: metric.py  request.py
notdiamond/toolkit/: __init__.py  _retry.py  custom_router.py  langchain.py  openai.py  retry.py
notdiamond/toolkit/litellm/: README.md  __init__.py  litellm.py  litellm_notdiamond.py  main.py
notdiamond/toolkit/rag/: document_loaders.py  evaluation.py  evaluation_dataset.py  llms.py  metrics.py  optuna.py  testset.py  workflow.py
tests/: conftest.py  helpers.py  test_init.py  test_types.py
tests/cassettes/test_init/: test_async_init_multi_provider_multi_model.yaml  test_async_init_multi_provider_multi_model_azure_error.yaml  test_async_init_multi_provider_multi_model_multi_config.yaml  test_init_multi_provider_multi_model.yaml  test_init_multi_provider_multi_model_azure_error.yaml  test_init_multi_provider_multi_model_multi_config.yaml
tests/static/: airbnb_tos.md
tests/test_components/: test_utils.py
tests/test_components/test_llms/: test_callbacks.py  test_embedding_config.py  test_llm.py  test_llm_request.py  test_provider.py
tests/test_documentation/: test_fallback_and_custom.py  test_function_calling.py  test_getting_started.py  test_langchain.py  test_openrouter.py  test_personalization.py  test_rag.py  test_structured_output.py
tests/test_documentation/cassettes/test_fallback_and_custom/: test_custom_logic.yaml
tests/test_documentation/cassettes/test_function_calling/: test_function_calling.yaml  test_function_calling_via_rest_api.yaml
tests/test_documentation/cassettes/test_getting_started/: test_main_example.yaml  test_model_select.yaml  test_pass_array_of_messages.yaml  test_programatic_define_llm_configs.yaml
tests/test_documentation/cassettes/test_langchain/: test_streaming.yaml
tests/test_documentation/cassettes/test_openrouter/: test_openrouter_integration.yaml
tests/test_documentation/cassettes/test_personalization/: test_personalization.yaml
tests/test_documentation/cassettes/test_structured_output/: test_structured_output.yaml  test_structured_output_streaming.yaml
tests/test_llm_calls/: test_anthropic.py  test_cohere.py  test_google.py  test_mistral.py  test_moonshotai.py  test_openai.py  test_openai_o1.py  test_perplexity.py  test_replicate.py  test_togetherai.py
tests/test_llm_calls/cassettes/test_anthropic/: Test_Anthropic_LLMs.test_claude_21_response_model.yaml  Test_Anthropic_LLMs.test_claude_21_with_streaming.yaml  (+25 more)
tests/test_toolkit/: test_custom_router.py  test_litellm.py  test_openai.py  test_openai_client.py  test_retry.py
tests/test_toolkit/cassettes/: test_async_completion_notdiamond.yaml  test_async_completion_notdiamond_stream.yaml  test_completion_notdiamond.yaml  test_completion_notdiamond_stream.yaml  test_completion_notdiamond_tool_calling.yaml
tests/test_toolkit/langchain/: test_integration.py  test_unit.py
tests/test_toolkit/rag/: conftest.py  test_data_gen.py  test_evaluation.py  test_example_workflow.py  test_workflow.py
(+372 files in other folders)
